# CTS-Ground-Station-UHF-Antenna-Switch

./: .gitignore  README.md
.github/workflows/: build-firmware.yml
UHF_Antenna_Switch/: Relay_K1.kicad_sch  UHF_Antenna_Switch.kicad_pcb  UHF_Antenna_Switch.kicad_pro  UHF_Antenna_Switch.kicad_sch  fp-lib-table
UHF_Antenna_Switch/lib/: 00-project-symbols.kicad_sym
UHF_Antenna_Switch/lib/00-project-footprints.pretty/: Amphenol N Jack 172234.kicad_mod  I100N50X4B-On-PCB.kicad_mod  PCB-Trace-RF-Coupler.kicad_mod  RP2040 Zero.kicad_mod  X4C09F1 - 30S.kicad_mod  X4C09F1-30S.kicad_mod
docs/: Calibration.md  Design_Notes.md  PCB_Test_Plan.md  RF_Coupler_Design_Notes.md
firmware/: .gitignore  CMakeLists.txt  README.md  main.c  pico_sdk_import.cmake
firmware/cmake/: generate_build_info.cmake
